Prototype of the dragula-based drag-and-drop

--- a/demo/home/home.html
+++ b/demo/home/home.html
@@ -1,6 +1,6 @@
 <main>
     <div class="home-container">
-        <div>
+        <!--<div>
             <h3>Simple Input with two items</h3>
             <tag-input [(ngModel)]="items"
                        (onSelect)="onSelect($event)"
@@ -279,7 +279,7 @@
                 <tag-input-dropdown [autocompleteItems]="autocompleteItems">
                 </tag-input-dropdown>
             </tag-input>
-        </div>
+        </div>-->
 
         <div>
             <h3>Drag and drop</h3>
@@ -307,7 +307,7 @@
             </tag-input>
         </div>
 
-        <div>
+        <!--<div>
             <h3>Confirm adding and removing tags with Observables</h3>
             <tag-input [ngModel]="['item1']"
                        [dragZone]="'zone1'"
@@ -337,6 +337,6 @@
                     [identifyBy]="'id'">
                 </tag-input-dropdown>
             </tag-input>
-        </div>
+        </div>-->
     </div>
 </main>
